tests/ui/wrong-type-span.stderr
error[E0277]: the trait bound `&str: __private::into_span::IntoSpan` is not satisfied
 --> tests/ui/wrong-type-span.rs:6:20
  |
6 |     quote_spanned!(span=> #x);
  |     ---------------^^^^------
  |     |              |
  |     |              the trait `__private::into_span::IntoSpan` is not implemented for `&str`
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `__private::into_span::IntoSpan`:
            Span
            proc_macro2::extra::DelimSpan
note: required by a bound in `into_span`
 --> src/runtime.rs
  |
  | pub fn into_span<S: IntoSpan>(s: S) -> Span {
  |                     ^^^^^^^^ required by this bound in `into_span`
